# fusion

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  pypi-publish.yml  release.yml
docs/: orm.md
src/: main.py
src/fusion/: __init__.py  _utils.py  annotation.py  annotations.py  application.py  cli.py  context.py  di.py  exceptions.py  handler.py  injectable.py  injectors.py  middleware.py  object.py  protocols.py  renderers.py  request.py  resolvers.py  responses.py  route.py  router.py  routing.py  testing.py  types.py
src/fusion/http/: __init__.py  annotations.py  application.py  decoder.py  endpoint.py  exceptions.py  middleware.py  request.py  response.py  routing.py  types.py
src/fusion/orm/: __init__.py  column.py  conditions.py  constraints.py  expressions.py  fields.py  functions.py  model.py  query.py
src/fusion/orm/migration/: apply.py  diff.py  snapshot.py
src/fusion/orm/shift/: __init__.py  apply.py  draft.py  history.py  operations.py  replay.py  snapshot.py  state.py
src/fusion/sql/: querybuilder.py
tests/: conftest.py
tests/fusion/: test_application.py  test_cli.py  test_di.py  test_draft.py  test_factory.py  test_handler.py  test_headers.py  test_history.py  test_middleware.py  test_object.py  test_query_params.py  test_request.py  test_request_body.py  test_responses.py  test_routing.py  test_shift_apply.py  test_testing.py
tests/fusion/orm/: test_column.py  test_conditions.py  test_constraints.py  test_coverage.py  test_expressions.py  test_fields.py  test_free_query.py  test_functions.py  test_model.py  test_query.py  test_relationships.py
tests/fusion/orm/integration/: conftest.py  test_migration_cli.py  test_orm_integration.py
tests/fusion/orm/migration/: test_apply.py  test_diff.py  test_snapshot.py
tests/fusion/orm/shift/: test_operations.py  test_replay.py  test_snapshot.py
tests/http/: test_endpoint.py
tests/sql/: test_querybuilder.py
