[project]
name = "fusion"
version = "0.6.0"
description = "Fusion is a modern ASGI web framework for Python with built-in dependency injection, OpenAPI schema generation, and MCP support."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE.md" }
authors = [
  { name="Okan Akbulut" }
]
dependencies = [
 "msgspec>=0.21.1",
 "typedprotocol>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/okanakbulut/fusion"


[project.optional-dependencies]
dev = [
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pre-commit==4.2.0",
    "ruff==0.15.11",
    "pyright==1.1.408",
    "commitizen==4.13.10",
    "ipython",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]
extend-select = ["C90", "I", "F", "E", "ASYNC", "S", "B", "UP", "RUF"]
extend-ignore = ["F401", "S101", "RUF012", "UP047"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/**" = ["D101", "D102", "D103", "F", "E501", "S", "B"]
"**/tests/sql/**" = ["E501"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--quiet",
    "--tb=long",
]
testpaths = ["tests", "src/fusion"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
source = ["src/fusion"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
fail_under = 98
show_missing = true
skip_covered = false

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
exclude = ["**/__init__.py", "**/__pycache__"]

[tool.uv.sources]
typedprotocol = { git = "https://github.com/okanakbulut/typedprotocol.git", rev = "main" }
